--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
             <div class="logo">
                 <a class="simple-text logo-normal">
                     @AppInfo.SoftwareName <br />
-                    @ViewBag.WhichDashboard
+                    <span class="which-dashboard">@ViewBag.WhichDashboard</span>
                 </a>                
             </div>
             <div class="sidebar-wrapper">
