--- a/Content/custom.css
+++ b/Content/custom.css
@@ -9,3 +9,8 @@
 .card [class*="card-header-"]:not(.card-header-icon):not(.card-header-text):not(.card-header-image) {
     margin-bottom: 25px;
 }
+
+.which-dashboard {
+    color: #a7a8a9 !important;
+    font-size: 16px !important;
+}
