--- a/Views/Faculty/Index.cshtml
+++ b/Views/Faculty/Index.cshtml
@@ -1,7 +1,72 @@
-﻿
+﻿@model WorkFlowManagement.Models.MeetingsAndNoticeBundle
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Dashboard";
+    ViewBag.DashboardActive = "active";
 }
 
-<h2>Faculty</h2>
-
+<div class="row">
+    <div class="col-lg-6 col-md-6 col-12">
+        <div class="card">
+            <div class="card-header">
+                <h4 class="card-title">
+                    Notice Board
+                    <a href="@Url.Action("NoticeBoards")" class="pull-right btn btn-sm btn-outline-primary">View All</a>
+                </h4>
+            </div>
+            <div class="card-body">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Title</th>
+                            <th>Description</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var NoticeItem in Model.NoticeBoard)
+                        {
+                            <tr>
+                                <td>@NoticeItem.Date.ToLongDateString()</td>
+                                <td>@NoticeItem.Title</td>
+                                <td>@NoticeItem.Description</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-6 col-md-6 col-12">
+        <div class="card">
+            <div class="card-header">
+                <h4 class="card-title">
+                    Meetings
+                    <a href="@Url.Action("Meetings")" class="pull-right btn btn-sm btn-outline-primary">View All</a>
+                </h4>
+            </div>
+            <div class="card-body">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Date</th>
+                            <th>Time</th>
+                            <th>Title</th>
+                            <th>Place</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var MeetingsItem in Model.Meetings)
+                        {
+                            <tr>
+                                <td>@MeetingsItem.DateOfMeeting.ToLongDateString()</td>
+                                <td>@MeetingsItem.TimeOfMeeting</td>
+                                <td>@MeetingsItem.Title</td>
+                                <td>@MeetingsItem.Place</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
