--- a/Views/Faculty/Meetings.cshtml
+++ b/Views/Faculty/Meetings.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<WorkFlowManagement.Models.NoticeBoard>
+﻿@model IEnumerable<WorkFlowManagement.Models.Meetings>
 @{
-    ViewBag.Title = "Notice Board";
-    ViewBag.NoticeActive = "active";
+    ViewBag.Title = "Meetings";
+    ViewBag.MeetingsActive = "active";
 }
 
 <div class="row">
@@ -9,11 +9,8 @@
         <div class="card">
             <div class="card-header card-header-primary">
                 <div class="row align-items-center">
-                    <div class="col-6">
-                        <h4 class="card-title ">@ViewBag.Title</h4>
-                    </div>
-                    <div class="col-6">
-                        <a href="@Url.Action("AddNoticeBoards")" class="btn btn-info pull-right">Add Notice</a>
+                    <div class="col-12">
+                        <h4 class="card-title ">@ViewBag.Title - @ViewBag.MyDepartmentName Department</h4>
                     </div>
                 </div>
             </div>
@@ -29,13 +26,19 @@
                                     Date
                                 </th>
                                 <th>
+                                    Time
+                                </th>
+                                <th>
+                                    Added By
+                                </th>
+                                <th>
                                     Title
                                 </th>
                                 <th>
                                     Description
                                 </th>
                                 <th>
-                                    Action
+                                    Place
                                 </th>
                             </tr>
                         </thead>
@@ -46,7 +49,13 @@
                                 <tr>
                                     <th scope="row">@i</th>
                                     <td>
-                                        @item.Date.ToLongDateString()
+                                        @item.DateOfMeeting.ToLongDateString()
+                                    </td>
+                                    <td>
+                                        @item.TimeOfMeeting
+                                    </td>
+                                    <td>
+                                        @item.AddedBy
                                     </td>
                                     <td>
                                         @item.Title
@@ -55,9 +64,7 @@
                                         @item.Description
                                     </td>
                                     <td>
-                                        <button class="btn btn-danger btn-fab btn-fab-mini btn-round" onclick="DeleteThis(@item.ID)">
-                                            <i class="material-icons">delete</i>
-                                        </button>
+                                        @item.Place
                                     </td>
                                 </tr>
                                 i++;
@@ -76,44 +83,5 @@
             $('#myTable').DataTable();
         });
 
-        function DeleteThis(id) {
-            if (confirm('Are you sure you want to delete this notice?')) {
-                window.location.replace("/Hod/DeleteNoticeBoard/"+id);
-            }
-        }
     </script>
-    @{
-        int Notification = 0;
-        try
-        {
-            /*
-             * try block to check if Session["Notification"] exist
-             * if exist then convert  string to int
-             */
-            Notification = Convert.ToInt32(Session["Notification"]);
-        }
-        catch
-        { }
-        if (Notification == 1)
-        {
-            <script>
-                SuccessAlert('Notice added successfully');
-            </script>
-            Session["Notification"] = null;
-        }
-        else if (Notification == 2)
-        {
-            <script>
-                ErrorAlert();
-            </script>
-            Session["Notification"] = null;
-        }
-        else if (Notification == 3)
-        {
-            <script>
-                SuccessAlert('Notice deleted successfully');
-            </script>
-            Session["Notification"] = null;
-        }
-    }
 }
