--- a/Views/Hod/Meetings.cshtml
+++ b/Views/Hod/Meetings.cshtml
@@ -1,18 +1,19 @@
-﻿@model IEnumerable<WorkFlowManagement.Models.Faculty>
+﻿@model IEnumerable<WorkFlowManagement.Models.Meetings>
 @{
-    ViewBag.Title = "Faculty";
-    ViewBag.FacultyActive = "active";
+    ViewBag.Title = "Meetings";
+    ViewBag.MeetingsActive = "active";
 }
+
 <div class="row">
     <div class="col-md-12">
         <div class="card">
             <div class="card-header card-header-primary">
                 <div class="row align-items-center">
                     <div class="col-6">
-                        <h4 class="card-title ">@ViewBag.Title</h4>
+                        <h4 class="card-title ">@ViewBag.Title - @ViewBag.MyDepartmentName Department</h4>
                     </div>
                     <div class="col-6">
-                        <a href="@Url.Action("AddFaculty")" class="btn btn-info pull-right">Add Faculty</a>
+                        <a href="@Url.Action("AddMeetings")" class="btn btn-info pull-right">Add Meeting</a>
                     </div>
                 </div>
             </div>
@@ -25,25 +26,22 @@
                                     #
                                 </th>
                                 <th>
-                                   Image
+                                    Date
                                 </th>
                                 <th>
-                                    Faculty ID
+                                    Time
                                 </th>
                                 <th>
-                                    Name
+                                    Added By
                                 </th>
                                 <th>
-                                    Email
+                                    Title
                                 </th>
                                 <th>
-                                    Mobile
+                                    Description
                                 </th>
                                 <th>
-                                    Department
-                                </th>
-                                <th>
-                                    Subject
+                                    Place
                                 </th>
                                 <th>
                                     Action
@@ -57,30 +55,27 @@
                                 <tr>
                                     <th scope="row">@i</th>
                                     <td>
-                                        <img src="@Html.DisplayFor(modelItem => item.ImgUrl)" height="50" />
+                                        @item.DateOfMeeting.ToLongDateString()
                                     </td>
                                     <td>
-                                        F-@Html.DisplayFor(modelItem => item.ID)
+                                        @item.TimeOfMeeting
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.Name)
+                                        @item.AddedBy
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.Email)
+                                        @item.Title
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.Mobile)
+                                        @item.Description
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.DeptName)
+                                        @item.Place
                                     </td>
                                     <td>
-                                        @Html.DisplayFor(modelItem => item.Subject)
-                                    </td>
-                                    <td>
-                                        <a class="btn btn-outline-primary btn-sm btn-round" href="@Url.Action("EditFaculty", new { id = item.ID })">
-                                            <i class="material-icons">create</i> Edit
-                                        </a>
+                                        <button class="btn btn-danger btn-fab btn-fab-mini btn-round" onclick="DeleteMeeting(@item.ID)">
+                                            <i class="material-icons">delete</i>
+                                        </button>
                                     </td>
                                 </tr>
                                 i++;
@@ -98,6 +93,13 @@
         $(document).ready(function () {
             $('#myTable').DataTable();
         });
+
+        function DeleteMeeting(id) {
+            if (confirm('Are you sure you want to delete this meeting?')) {
+                window.location.replace("/Hod/DeleteMeetings/"+id);
+            }
+        }
+
     </script>
     @{
         int Notification = 0;
@@ -111,10 +113,11 @@
         }
         catch
         { }
+
         if (Notification == 1)
         {
             <script>
-                SuccessAlert('Faculty added successfully');
+                SuccessAlert('Meeting added successfully');
             </script>
             Session["Notification"] = null;
         }
@@ -125,10 +128,10 @@
             </script>
             Session["Notification"] = null;
         }
-        else if (Notification == 3)
+        if (Notification == 3)
         {
             <script>
-                SuccessAlert('Faculty updated successfully');
+                SuccessAlert('Meeting deleted successfully');
             </script>
             Session["Notification"] = null;
         }
