--- a/Views/Faculty/QuestionPapers.cshtml
+++ b/Views/Faculty/QuestionPapers.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<WorkFlowManagement.Models.Hod>
+﻿@model IEnumerable<WorkFlowManagement.Models.QPaper>
 @{
-    ViewBag.Title = "Hod";
-    ViewBag.HODActive = "active";
+    ViewBag.Title = "Question Papers";
+    ViewBag.QuestionPapersActive = "active";
 }
 
 <div class="row">
@@ -13,7 +13,7 @@
                         <h4 class="card-title ">@ViewBag.Title</h4>
                     </div>
                     <div class="col-6">
-                        <a href="@Url.Action("AddHOD")" class="btn btn-info pull-right">Add Hod</a>
+                        <a href="@Url.Action("AddQuestionPapers")" class="btn btn-info pull-right">Add Question Papers</a>
                     </div>
                 </div>
             </div>
@@ -26,25 +26,22 @@
                                     #
                                 </th>
                                 <th>
-                                    Image
-                                </th>
-                                <th>
-                                    Hod ID
-                                </th>
-                                <th>
-                                    Name
-                                </th>
-                                <th>
-                                    Email
-                                </th>
-                                <th>
-                                    Mobile
-                                </th>
-                                <th>
-                                    Department
+                                    Title
                                 </th>
                                 <th>
                                     Subject
+                                </th>
+                                <th>
+                                    Description
+                                </th>
+                                <th>
+                                    File
+                                </th>
+                                <th>
+                                    Status
+                                </th>
+                                <th>
+                                    Added Date
                                 </th>
                                 <th>
                                     Action
@@ -55,39 +52,56 @@
                             @{int i = 1; }
                             @foreach (var item in Model)
                             {
-                                <tr>
-                                    <th scope="row">@i</th>
-                                    <td>
-                                        <img src="@Html.DisplayFor(modelItem => item.ImgUrl)" height="50" />
+                            <tr>
+                                <th scope="row">@i</th>
+                                <td>
+                                    @item.Title
+                                </td>
+                                <td>
+                                    @item.Subject
+                                </td>
+                                <td>
+                                    @item.Description
+                                </td>
+                                <td>
+                                    <a href="@item.Path" target="_blank">
+                                        View
+                                    </a>
+                                </td>
+                                @if (item.Status == 0)
+                                {
+                                    <td class="text-warning">
+                                        Approval Pending!
                                     </td>
-                                    <td>
-                                        H-@Html.DisplayFor(modelItem => item.ID)
+                                }
+                                else if (item.Status == 1)
+                                {
+                                    <td class="text-success">
+                                        Approved!
                                     </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Name)
+                                }
+                                else if (item.Status == 2)
+                                {
+                                    <td class="text-danger">
+                                        Declined!
                                     </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Email)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Mobile)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.DeptName)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Subject)
-                                    </td>
-                                    <td>
-                                        <a class="btn btn-success btn-fab btn-fab-mini btn-round" href="@Url.Action("EditHOD", new { id = item.ID })">
-                                            <i class="material-icons">create</i>
-                                        </a>
-                                        &nbsp;
-                                        @*<button class="btn btn-danger btn-fab btn-fab-mini btn-round" onclick="DeleteThis(@item.ID)">
+                                }
+                                <td>
+                                    @item.DateTime.ToLongDateString()
+                                </td>
+                                <td>
+                                    @if (item.Status == 0)
+                                    {
+                                        <button class="btn btn-danger btn-fab btn-fab-mini btn-round" onclick="DeleteThis(@item.ID)">
                                             <i class="material-icons">delete</i>
-                                        </button>*@
-                                    </td>
-                                </tr>
+                                        </button>
+                                    }
+                                    else
+                                    {
+                                        <span class="text-muted">No Action Required</span>
+                                    }
+                                </td>
+                            </tr>
                                 i++;
                             }
                         </tbody>
@@ -105,10 +119,11 @@
         });
 
         function DeleteThis(id) {
-            if (confirm('Are you sure you want to delete hod?')) {
-                window.location.replace("/Principal/DeleteHOD/"+id);
+            if (confirm('Are you sure you want to delete this Question Paper?')) {
+                window.location.replace("/Faculty/DeleteQuestionPapers/"+id);
             }
         }
+
     </script>
     @{
         int Notification = 0;
@@ -122,10 +137,11 @@
         }
         catch
         { }
+
         if (Notification == 1)
         {
             <script>
-                SuccessAlert('Hod added successfully');
+                SuccessAlert('Question Paper added successfully! Kindly wait for approval');
             </script>
             Session["Notification"] = null;
         }
@@ -136,10 +152,10 @@
             </script>
             Session["Notification"] = null;
         }
-        else if (Notification == 3)
+        if (Notification == 3)
         {
             <script>
-                SuccessAlert('Hod updated successfully');
+                SuccessAlert('Question Paper deleted successfully');
             </script>
             Session["Notification"] = null;
         }
@@ -147,13 +163,6 @@
         {
             <script>
                 ErrorAlert();
-            </script>
-            Session["Notification"] = null;
-        }
-        else if (Notification == 5)
-        {
-            <script>
-               SuccessAlert('Hod deleted successfully');
             </script>
             Session["Notification"] = null;
         }
