--- a/Views/Hod/Leaves.cshtml
+++ b/Views/Hod/Leaves.cshtml
@@ -46,41 +46,52 @@
                             @{int i = 1; }
                             @foreach (var item in Model)
                             {
-                                <tr>
-                                    <th scope="row">@i</th>
-                                    <td>
-                                        @item.FromDate.ToLongDateString()
+                            <tr>
+                                <th scope="row">@i</th>
+                                <td>
+                                    @item.FromDate.ToLongDateString()
+                                </td>
+                                <td>
+                                    @item.ToDate.ToLongDateString()
+                                </td>
+                                <td>
+                                    @item.Reason
+                                </td>
+                                @if (item.Status == 0)
+                                {
+                                    <td class="text-warning">
+                                        Approval Pending!
                                     </td>
-                                    <td>
-                                        @item.ToDate.ToLongDateString()
+                                }
+                                else if (item.Status == 1)
+                                {
+                                    <td class="text-success">
+                                        Approved!
                                     </td>
-                                    <td>
-                                        @item.Reason
+                                }
+                                else if (item.Status == 2)
+                                {
+                                    <td class="text-danger">
+                                        Declined!
                                     </td>
-                                    @if (item.Status == 0)
-                                    {
-                                        <td class="text-warning">
-                                            Approval Pending!
-                                        </td>
-                                    }
-                                    else if (item.Status == 1)
-                                    {
-                                        <td class="text-success">
-                                            Approved!
-                                        </td>
-                                    }
-                                    else if (item.Status == 2)
-                                    {
-                                        <td class="text-danger">
-                                            Declined!
-                                        </td>
-                                    }
+                                }
+                                @if (item.Status == 0)
+                                {
+                            <td>
+                                <button class="btn btn-danger btn-fab btn-fab-mini btn-round" onclick="DeleteMeeting(@item.ID)">
+                                    <i class="material-icons">delete</i>
+                                </button>
+                            </td>
+                                }
+                                else
+                                {
                                     <td>
-                                        <button class="btn btn-danger btn-fab btn-fab-mini btn-round" onclick="DeleteMeeting(@item.ID)">
-                                            <i class="material-icons">delete</i>
-                                        </button>
+                                        No Action Required
                                     </td>
-                                </tr>
+                                    
+                                }
+                                
+                            </tr>
                                 i++;
                             }
                         </tbody>
